# pandoc-sidenote

./: .gitignore  LICENSE  Main.hs  Makefile  README.md  package.yaml  pandoc-sidenote-new.lua  pandoc-sidenote.cabal  pandoc-sidenote.lua  stack.yaml  stylua.toml
src/: Main.hs
src/Text/Pandoc/: SideNote.hs  SideNoteHTML.hs
