name:                pandoc-sidenote
version:             0.19.0.0
synopsis:            Convert Pandoc Markdown-style footnotes into sidenotes
description:         Convert Pandoc Markdown-style footnotes into sidenotes
homepage:            https://github.com/jez/pandoc-sidenote#readme
license:             MIT
license-file:        LICENSE
author:              Jake Zimmerman
maintainer:          zimmerman.jake@gmail.com
copyright:           2016 Jake Zimmerman
category:            CommandLine
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

Library
  Exposed-modules:   Text.Pandoc.SideNote
  hs-source-dirs:      src
  build-depends:       base
                     , monad-gen
                     , pandoc
                     , pandoc-types
  default-language:    Haskell2010

executable pandoc-sidenote
  hs-source-dirs:      ./
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pandoc-sidenote
                     , pandoc-types
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jez/pandoc-sidenote
